# backend/api/server/agntcy/identity/platform/v1alpha1/device_service_grpc.pb.go
@@ -3,7 +3,7 @@
 
 // Code generated by protoc-gen-go-grpc. DO NOT EDIT.
 // versions:
-// - protoc-gen-go-grpc v1.3.0
+// - protoc-gen-go-grpc v1.5.1
 // - protoc             (unknown)
 // source: agntcy/identity/platform/v1alpha1/device_service.proto
 
@@ -19,8 +19,8 @@ import (
 
 // This is a compile-time assertion to ensure that this generated file
 // is compatible with the grpc package it is being compiled against.
-// Requires gRPC-Go v1.32.0 or later.
-const _ = grpc.SupportPackageIsVersion7
+// Requires gRPC-Go v1.64.0 or later.
+const _ = grpc.SupportPackageIsVersion9
 
 const (
 	DeviceService_AddDevice_FullMethodName      = "/agntcy.identity.platform.v1alpha1.DeviceService/AddDevice"
@@ -30,6 +30,8 @@ const (
 // DeviceServiceClient is the client API for DeviceService service.
 //
 // For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+//
+// DeviceService manages device.
 type DeviceServiceClient interface {
 	// Add new device for approval flow
 	AddDevice(ctx context.Context, in *AddDeviceRequest, opts ...grpc.CallOption) (*emptypb.Empty, error)
@@ -46,8 +48,9 @@ func NewDeviceServiceClient(cc grpc.ClientConnInterface) DeviceServiceClient {
 }
 
 func (c *deviceServiceClient) AddDevice(ctx context.Context, in *AddDeviceRequest, opts ...grpc.CallOption) (*emptypb.Empty, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
 	out := new(emptypb.Empty)
-	err := c.cc.Invoke(ctx, DeviceService_AddDevice_FullMethodName, in, out, opts...)
+	err := c.cc.Invoke(ctx, DeviceService_AddDevice_FullMethodName, in, out, cOpts...)
 	if err != nil {
 		return nil, err
 	}
@@ -55,8 +58,9 @@ func (c *deviceServiceClient) AddDevice(ctx context.Context, in *AddDeviceReques
 }
 
 func (c *deviceServiceClient) RegisterDevice(ctx context.Context, in *RegisterDeviceRequest, opts ...grpc.CallOption) (*emptypb.Empty, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
 	out := new(emptypb.Empty)
-	err := c.cc.Invoke(ctx, DeviceService_RegisterDevice_FullMethodName, in, out, opts...)
+	err := c.cc.Invoke(ctx, DeviceService_RegisterDevice_FullMethodName, in, out, cOpts...)
 	if err != nil {
 		return nil, err
 	}
@@ -65,7 +69,9 @@ func (c *deviceServiceClient) RegisterDevice(ctx context.Context, in *RegisterDe
 
 // DeviceServiceServer is the server API for DeviceService service.
 // All implementations should embed UnimplementedDeviceServiceServer
-// for forward compatibility
+// for forward compatibility.
+//
+// DeviceService manages device.
 type DeviceServiceServer interface {
 	// Add new device for approval flow
 	AddDevice(context.Context, *AddDeviceRequest) (*emptypb.Empty, error)
@@ -73,9 +79,12 @@ type DeviceServiceServer interface {
 	RegisterDevice(context.Context, *RegisterDeviceRequest) (*emptypb.Empty, error)
 }
 
-// UnimplementedDeviceServiceServer should be embedded to have forward compatible implementations.
-type UnimplementedDeviceServiceServer struct {
-}
+// UnimplementedDeviceServiceServer should be embedded to have
+// forward compatible implementations.
+//
+// NOTE: this should be embedded by value instead of pointer to avoid a nil
+// pointer dereference when methods are called.
+type UnimplementedDeviceServiceServer struct{}
 
 func (UnimplementedDeviceServiceServer) AddDevice(context.Context, *AddDeviceRequest) (*emptypb.Empty, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method AddDevice not implemented")
@@ -83,6 +92,7 @@ func (UnimplementedDeviceServiceServer) AddDevice(context.Context, *AddDeviceReq
 func (UnimplementedDeviceServiceServer) RegisterDevice(context.Context, *RegisterDeviceRequest) (*emptypb.Empty, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method RegisterDevice not implemented")
 }
+func (UnimplementedDeviceServiceServer) testEmbeddedByValue() {}
 
 // UnsafeDeviceServiceServer may be embedded to opt out of forward compatibility for this service.
 // Use of this interface is not recommended, as added methods to DeviceServiceServer will
@@ -92,6 +102,13 @@ type UnsafeDeviceServiceServer interface {
 }
 
 func RegisterDeviceServiceServer(s grpc.ServiceRegistrar, srv DeviceServiceServer) {
+	// If the following call pancis, it indicates UnimplementedDeviceServiceServer was
+	// embedded by pointer and is nil.  This will cause panics if an
+	// unimplemented method is ever invoked, so we test this at initialization
+	// time to prevent it from happening at runtime later due to I/O.
+	if t, ok := srv.(interface{ testEmbeddedByValue() }); ok {
+		t.testEmbeddedByValue()
+	}
 	s.RegisterService(&DeviceService_ServiceDesc, srv)
 }
 
