# backend/api/server/agntcy/identity/platform/v1alpha1/settings_service_grpc.pb.go
@@ -3,7 +3,7 @@
 
 // Code generated by protoc-gen-go-grpc. DO NOT EDIT.
 // versions:
-// - protoc-gen-go-grpc v1.3.0
+// - protoc-gen-go-grpc v1.5.1
 // - protoc             (unknown)
 // source: agntcy/identity/platform/v1alpha1/settings_service.proto
 
@@ -18,8 +18,8 @@ import (
 
 // This is a compile-time assertion to ensure that this generated file
 // is compatible with the grpc package it is being compiled against.
-// Requires gRPC-Go v1.32.0 or later.
-const _ = grpc.SupportPackageIsVersion7
+// Requires gRPC-Go v1.64.0 or later.
+const _ = grpc.SupportPackageIsVersion9
 
 const (
 	SettingsService_GetSettings_FullMethodName = "/agntcy.identity.platform.v1alpha1.SettingsService/GetSettings"
@@ -30,6 +30,8 @@ const (
 // SettingsServiceClient is the client API for SettingsService service.
 //
 // For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+//
+// SettingsService manages settings.
 type SettingsServiceClient interface {
 	// Get Settings
 	GetSettings(ctx context.Context, in *GetSettingsRequest, opts ...grpc.CallOption) (*Settings, error)
@@ -48,8 +50,9 @@ func NewSettingsServiceClient(cc grpc.ClientConnInterface) SettingsServiceClient
 }
 
 func (c *settingsServiceClient) GetSettings(ctx context.Context, in *GetSettingsRequest, opts ...grpc.CallOption) (*Settings, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
 	out := new(Settings)
-	err := c.cc.Invoke(ctx, SettingsService_GetSettings_FullMethodName, in, out, opts...)
+	err := c.cc.Invoke(ctx, SettingsService_GetSettings_FullMethodName, in, out, cOpts...)
 	if err != nil {
 		return nil, err
 	}
@@ -57,8 +60,9 @@ func (c *settingsServiceClient) GetSettings(ctx context.Context, in *GetSettings
 }
 
 func (c *settingsServiceClient) SetApiKey(ctx context.Context, in *SetApiKeyRequest, opts ...grpc.CallOption) (*ApiKey, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
 	out := new(ApiKey)
-	err := c.cc.Invoke(ctx, SettingsService_SetApiKey_FullMethodName, in, out, opts...)
+	err := c.cc.Invoke(ctx, SettingsService_SetApiKey_FullMethodName, in, out, cOpts...)
 	if err != nil {
 		return nil, err
 	}
@@ -66,8 +70,9 @@ func (c *settingsServiceClient) SetApiKey(ctx context.Context, in *SetApiKeyRequ
 }
 
 func (c *settingsServiceClient) SetIssuer(ctx context.Context, in *SetIssuerRequest, opts ...grpc.CallOption) (*IssuerSettings, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
 	out := new(IssuerSettings)
-	err := c.cc.Invoke(ctx, SettingsService_SetIssuer_FullMethodName, in, out, opts...)
+	err := c.cc.Invoke(ctx, SettingsService_SetIssuer_FullMethodName, in, out, cOpts...)
 	if err != nil {
 		return nil, err
 	}
@@ -76,7 +81,9 @@ func (c *settingsServiceClient) SetIssuer(ctx context.Context, in *SetIssuerRequ
 
 // SettingsServiceServer is the server API for SettingsService service.
 // All implementations should embed UnimplementedSettingsServiceServer
-// for forward compatibility
+// for forward compatibility.
+//
+// SettingsService manages settings.
 type SettingsServiceServer interface {
 	// Get Settings
 	GetSettings(context.Context, *GetSettingsRequest) (*Settings, error)
@@ -86,9 +93,12 @@ type SettingsServiceServer interface {
 	SetIssuer(context.Context, *SetIssuerRequest) (*IssuerSettings, error)
 }
 
-// UnimplementedSettingsServiceServer should be embedded to have forward compatible implementations.
-type UnimplementedSettingsServiceServer struct {
-}
+// UnimplementedSettingsServiceServer should be embedded to have
+// forward compatible implementations.
+//
+// NOTE: this should be embedded by value instead of pointer to avoid a nil
+// pointer dereference when methods are called.
+type UnimplementedSettingsServiceServer struct{}
 
 func (UnimplementedSettingsServiceServer) GetSettings(context.Context, *GetSettingsRequest) (*Settings, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method GetSettings not implemented")
@@ -99,6 +109,7 @@ func (UnimplementedSettingsServiceServer) SetApiKey(context.Context, *SetApiKeyR
 func (UnimplementedSettingsServiceServer) SetIssuer(context.Context, *SetIssuerRequest) (*IssuerSettings, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method SetIssuer not implemented")
 }
+func (UnimplementedSettingsServiceServer) testEmbeddedByValue() {}
 
 // UnsafeSettingsServiceServer may be embedded to opt out of forward compatibility for this service.
 // Use of this interface is not recommended, as added methods to SettingsServiceServer will
@@ -108,6 +119,13 @@ type UnsafeSettingsServiceServer interface {
 }
 
 func RegisterSettingsServiceServer(s grpc.ServiceRegistrar, srv SettingsServiceServer) {
+	// If the following call pancis, it indicates UnimplementedSettingsServiceServer was
+	// embedded by pointer and is nil.  This will cause panics if an
+	// unimplemented method is ever invoked, so we test this at initialization
+	// time to prevent it from happening at runtime later due to I/O.
+	if t, ok := srv.(interface{ testEmbeddedByValue() }); ok {
+		t.testEmbeddedByValue()
+	}
 	s.RegisterService(&SettingsService_ServiceDesc, srv)
 }
 
